tests/fixtures/invalid/duplicate_local.torel
unit fixtures.duplicate_local;

export proc main() -> Int32 {
    fix answer: Int32 = 41;
    fix answer: Int32 = 42;
    return answer;
}
